--- a/Neminaj/Views/SavedCartViewDetail.xaml
+++ b/Neminaj/Views/SavedCartViewDetail.xaml
@@ -7,6 +7,7 @@
     <Grid RowDefinitions="*, Auto" ColumnDefinitions="*,*,*">
 
         <CollectionView
+            ItemsLayout="{OnIdiom Phone='VerticalGrid, 1', Tablet='VerticalGrid, 1', Desktop='VerticalGrid, 2'}"
             Grid.Row="0"
             Grid.ColumnSpan="3"
             x:Name="listItemChoosen"
