--- a/Neminaj/Views/CartView.xaml
+++ b/Neminaj/Views/CartView.xaml
@@ -23,13 +23,13 @@
                             <Grid ColumnDefinitions="72, *, 0.5*, 0.15*, 0.25*" RowDefinitions="Auto, Auto, *" RowSpacing="5">
                                 <Image Grid.Row="0" Grid.Column="0" HeightRequest="{OnIdiom Phone='64', Tablet='64', Desktop='96'}" WidthRequest="{OnIdiom Phone='64', Tablet='64', Desktop='96'}" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" Source="{Binding ItemImgUrl}" />
                                 <Label Grid.Row="0" Grid.Column="1" FontAttributes="Bold" FontSize="14" Text="{Binding Name}" HorizontalOptions="StartAndExpand" VerticalOptions="Center" VerticalTextAlignment="End" />
-                                <Entry Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" x:Name="EntryCntOfItem" Text="{Binding CntOfItems}" Keyboard="Numeric" ReturnType="Done" VerticalOptions="Center" HorizontalOptions="FillAndExpand" VerticalTextAlignment="Center" TextChanged="EntryCntOfItem_TextChanged" ClassId="{Binding IdInList}" ReturnCommandParameter="{Binding .}"></Entry>
+                                <Entry Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" x:Name="EntryCntOfItem" Text="{Binding CntOfItems}" Keyboard="Numeric" ReturnType="Done" VerticalOptions="Center" HorizontalOptions="FillAndExpand" VerticalTextAlignment="Center" TextChanged="EntryCntOfItem_TextChanged" ClassId="{Binding IdInList}"></Entry>
                                 <Label Grid.Row="0" Grid.Column="3" Text="{Binding UnitTag}" VerticalOptions="Center" HorizontalOptions="Start"/>
                                 <ImageButton Grid.Row="0" Grid.Column="4" HeightRequest="30" WidthRequest="30" CommandParameter="{Binding .}" CornerRadius="10" BackgroundColor="Orange" Source="recycle_bin.png" Clicked="Delete_Clicked" VerticalOptions="Center" HorizontalOptions="End"/>
 
                                 <Line  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" BackgroundColor="DarkSlateGrey"></Line>
 
-                                <Grid ColumnDefinitions="72,0.8*,*" RowDefinitions="*" Grid.Row="2" Grid.ColumnSpan="5">
+                                <Grid ColumnDefinitions="{OnIdiom Phone='40,0.8*,*', Tablet='48,0.8*,*', Desktop='96,0.8*,*'}" RowDefinitions="*" Grid.Row="2" Grid.ColumnSpan="5">
                                     <Image Grid.Row="0" Grid.Column="0" HeightRequest="{OnIdiom Phone='32', Tablet='40', Desktop='96'}" WidthRequest="{OnIdiom Phone='32', Tablet='40', Desktop='96'}" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" Source="{Binding CompanyImgUrl}" />
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding PriceCartCalc, StringFormat='\Cena: {0\}'}" HorizontalOptions="Start" VerticalOptions="Center" />
                                     <Label Grid.Row="0" Grid.Column="2" Text="{Binding PriceDiscountCalc, StringFormat='\Cena so zľavou: {0\}'}" HorizontalOptions="Start" VerticalOptions="Center"/>
